@@ -73,6 +73,6 @@ DIST netbeans-websvc-6.0.tar.bz2 21262337 RMD160 aa0eea92a59cad8c5907c9a5be41a1a
 DIST netbeans-xml-6.0.tar.bz2 4404173 RMD160 6360765b44e988fb1ad4e529630ac1abbc4dae9d SHA1 92f489b03154a8153f8508387886afb9fbfa1959 SHA256 5d63287da3cfc42cbfb24ab619d1e96ff625124e1225c5377aa5d8c22deaecd9
 EBUILD netbeans-6.0.ebuild 32690 RMD160 53bf60c90e06f5fbb4b08a2363e750abf0a1b563 SHA1 9725266d8090a628691fa55fa179d5f8c72a3799 SHA256 a663b402ecd295ed316307b1be3772781e9f87c4013f6b1670a1ce1ca99d7669
 EBUILD netbeans-6.1-r1.ebuild 16545 RMD160 ae5471ae840869fbc962fceb48f8ee811efae729 SHA1 d4782ff9271907bbb98e64029be47bfce3d8677a SHA256 b5ffe94c7e7f66a7981c076c54fdc847a5773f4cf890c789935fbaee07299c2e
-EBUILD netbeans-6.5_beta.ebuild 15862 RMD160 7e3fa903e886dd1a75e95f75bc168a97427af067 SHA1 dd4abffd71eeed2707af8979332716ab09f7365c SHA256 081a2fce0df6f2b410e2330ca6231f15ef776ac40df93a5020a931ee99d2293e
-MISC ChangeLog 23918 RMD160 f9697c4777a7ab7e4969a414c3ee147a8dbbb333 SHA1 fb9df1a1447318d1781461ca34d8282741d424b4 SHA256 6ba821c4e8ca32332b5da17acca8a664553f14ff3f4cacf2a18b3b20edd7ea42
+EBUILD netbeans-6.5_beta.ebuild 17701 RMD160 1cade8331913a2a5d1f1ab11d6074517a1582802 SHA1 77a5f50cc48cc540545e780c8d2b86495d770ec4 SHA256 dca7b4dce373d2e81599f93ce029faf9347d34402f65313ddcaaf7f2342dc914
+MISC ChangeLog 24051 RMD160 4c985cf27c9ae8a626947f3f910a98e6ea1c11f8 SHA1 8eb865bd610bf14d350c681ccc8a746ba355009b SHA256 13abbe2105c4a944df3e351da6e2d176bda5ddf13d9853062e1ac86f5dd98f86
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
